--- a/index.html
+++ b/index.html
@@ -32,9 +32,27 @@
       </ul>
 
       <form class="w-1/3 flex flex-col" hx-post="/add-task/">
-        <input type="text" name="name" placeholder="Name" />
-        <input type="text" name="description" placeholder="Description" />
-        <button type="submit">Add Task</button>
+        <label for="name">Add Task</label>
+        <input
+          class="p-2 border border-gray-400 rounded-lg"
+          type="text"
+          name="name"
+          placeholder="Name"
+        />
+
+        <label for="description">Description</label>
+        <input
+          class="p-2 border border-gray-400 rounded-lg"
+          type="text"
+          name="description"
+          placeholder="Description"
+        />
+
+        <div class="mb-3"></div>
+
+        <button class="p-4 border border-gray-700 rounded-lg" type="submit">
+          Add Task
+        </button>
       </form>
     </main>
   </body>
