--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <title>Imon Dashboard</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="css/style.css" rel="stylesheet" />
 
     <script
       src="https://unpkg.com/htmx.org@1.9.8"
@@ -20,16 +19,13 @@
 
       <ul id="task-list">
 
-        {{ range .Tasks }}
 
         <li>
           <div class="w-1/3 p-4 mb-2 border border-gray-400 rounded-lg">
-            <h2>{{ .Name }}</h2>
-            <p class="italic">{{ .Description }}</p>
+            <h2>{{ .Data.TaskLog.CurrentTask.Name }}</h2>
           </div>
         </li>
 
-        {{ end }}
 
       </ul>
 
